fix: preserve guardrail block details in agent execution